fix: resolve alert box styling issues

--- a/src/docs/5.31.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
+++ b/src/docs/5.31.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
@@ -1,14 +1,11 @@
 ---
 title: Tailwind CSS
-description: Learn how to integrate tailwindcss in your Webiny project.
+description: Learn how to integrate Tailwind CSS in your Webiny project.
 ---
-
-import { Alert } from "@/components/Alert";
-import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
 
 <WhatYouWillLearn>
 
-- how to integrate Tailwind CSS in your Webiny project
+  - how to integrate Tailwind CSS in your Webiny project
 
 </WhatYouWillLearn>
 
@@ -36,7 +33,7 @@ But, you can use the same approach for other Webiny applications or a custom app
 
 <Alert type="info">
 
-Learn more about project applications and packages in the [Project Applications and Packages](../../core-development-concepts/project-organization/project-applications-and-packages) key topic.
+  Learn more about project applications and packages in the [Project Applications and Packages](../../core-development-concepts/project-organization/project-applications-and-packages) key topic.
 
 </Alert>
 
@@ -101,13 +98,13 @@ module.exports = {
 
 <Alert type="info">
 
-We have created the `tailwind.config.js` file in the root of Webiny project as the fastest way to have a centralized config for all things Tailwind. If you need, you can create individual config files for Website and Admin apps in their respective root folders.
+  We have created the `tailwind.config.js` file in the root of Webiny project as the fastest way to have a centralized config for all things Tailwind. If you need, you can create individual config files for Website and Admin apps in their respective root folders.
 
 </Alert>
 
 <Alert type="info">
 
-Learn more about configuring Tailwind in the [configuration documentation](https://tailwindcss.com/docs/configuration).
+  Learn more about configuring Tailwind in the [configuration documentation](https://tailwindcss.com/docs/configuration).
 
 </Alert>
 
@@ -207,10 +204,14 @@ If we did everything correctly, we should be able to see the new section we just
 ![Website demo using tailwindcss](./assets/integrate-tailwindcss/tailwind-css-demo-website.png)
 
 <Alert type="warning" title={"Please note!"}>
-  **Webiny does not provide any guarantees in regards to Tailwind CSS!**
-
-This guide should get you started, but any issues with styles, or similar irregularities that might occur after following this guide, are not something we'll be providing support for. If you find better ways to use Tailwind CSS with Webiny, we'd be thrilled to see your contribution to our repository.
-
+  <strong>
+    Webiny provides no guarantees in regards to issues that may occur after enabling Tailwind CSS.
+  </strong>
+  <br /> <br />
+  This guide should get you started with Tailwind CSS, but any issues with styles, or similar
+  irregularities that might occur after following this guide, are not something we'll be providing
+  support for. If you find better ways to use Tailwind CSS with Webiny, we'd be thrilled to see your
+  contribution to our repository.
 </Alert>
 
 ## FAQ
