--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
@@ -1,10 +1,7 @@
 ---
 title: Tailwind CSS
-description: Learn how to integrate tailwindcss in your Webiny project.
+description: Learn how to integrate Tailwind CSS in your Webiny project.
 ---
-
-import { Alert } from "@/components/Alert";
-import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
 
 <WhatYouWillLearn>
 
@@ -207,10 +204,14 @@ If we did everything correctly, we should be able to see the new section we just
 ![Website demo using tailwindcss](./assets/integrate-tailwindcss/tailwind-css-demo-website.png)
 
 <Alert type="warning" title={"Please note!"}>
-  **Webiny does not provide any guarantees in regards to Tailwind CSS!**
-
-This guide should get you started, but any issues with styles, or similar irregularities that might occur after following this guide, are not something we'll be providing support for. If you find better ways to use Tailwind CSS with Webiny, we'd be thrilled to see your contribution to our repository.
-
+  <strong>
+    Webiny provides no guarantees in regards to issues that may occur after enabling Tailwind CSS.
+  </strong>
+  <br /> <br />
+  This guide should get you started with Tailwind CSS, but any issues with styles, or similar
+  irregularities that might occur after following this guide, are not something we'll be providing
+  support for. If you find better ways to use Tailwind CSS with Webiny, we'd be thrilled to see your
+  contribution to our repository.
 </Alert>
 
 ## FAQ
