feat: add 5.34.2 release notes

--- a/src/docs/shared/release-notes/5.34.2/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.34.2/upgrade-guide.mdx
@@ -1,23 +1,19 @@
 ---
-title: Upgrade from 5.34.0 to 5.34.1
-description: Learn how to upgrade Webiny from 5.34.0 to 5.34.1.
+title: Upgrade from 5.34.x to 5.34.2
+description: Learn how to upgrade Webiny from 5.34.x to 5.34.2.
 ---
 
 import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What you’ll learn">
 
-- how to upgrade Webiny from 5.34.0 to 5.34.1
+- how to upgrade Webiny from 5.34.x to 5.34.2
 
-</Alert>
-
-<Alert type="info" title={"You can skip this upgrade!"}>
-  You can skip this upgrade, and upgrade straight to the latest 5.34.x version.
 </Alert>
 
 <Alert type="info">
 
-Make sure to check out the [5.34.1 changelog](./changelog) to get familiar with the changes introduced in this release.
+Make sure to check out the [5.34.2 changelog](./changelog) to get familiar with the changes introduced in this release.
 
 </Alert>
 
@@ -26,10 +22,10 @@ Make sure to check out the [5.34.1 changelog](./changelog) to get familiar with 
 Upgrade all `@webiny/*` packages by running the following command:
 
 ```bash
-yarn up "@webiny/*@5.34.1"
+yarn up "@webiny/*@5.34.2"
 ```
 
-Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.34.1`.
+Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.34.2`.
 
 ## 2. Deploy Your Project
 
