security docs improvements

--- a/src/docs/5.34.x/overview/features/security.mdx
+++ b/src/docs/5.34.x/overview/features/security.mdx
@@ -59,10 +59,15 @@ We highly recommend that you use the `production` stack for all your projects ru
 
 The production stack by default is deployed inside a private VPC preventing direct access to resources like DynamoDB and the Elasticsearch database. Keeping your data safe.
 
-### VPC Endpoints
+### VPC & VPC Endpoints
 
-Webiny in its Enterprise tier, offers an additional infrastructure configuration, one that additionally hardens the security posture and keeps all the communication between Webiny services within the private network without exposing any of its services to the public internet. To enable such a secure setup Webiny uses VPC gateway endpoints for DynamoDB, S3 and Lambda, and VPC interface endpoints for Opensearch, Cognito and Clourfront. In such a setup Lambda functions and their communication with other services are all kept within a private network that is not exposed to the outside internet.
-In this setup, in case you need to additionally protect your Webiny so that only clients from within your AWS cloud can access it, a VPC peering connection can be established, keeping all the traffic within your network, including the client that's accessing your Webiny instance. 
+Webiny in its Enterprise tier, offers an additional infrastructure configuration, one that further hardens the security posture and keeps the communication between specific services within the private network without exposing any of its data or communication to the public internet. 
+
+Webiny Enterprise customers can deploy Webiny within their existing VPC that they already manage using their existing toolset. 
+
+In addition to deploying Webiny inside a VPC, VPC endpoints can be used with services like DynamoDB (gateway endpoint), S3 (gateway endpoint), SQS (interface endpoint) and EventBridge (interface endpoint). 
+
+As many organizations already have a securely configured VPC and VPC endpoints, Webiny can be configured to utilize those existing resources. If the preference is to deploy Webiny into an isolated AWS account, but still utilize the VPC and VPC endpoints, that configuration is also available. 
 
 Additional security improvements you can make to your project:
 
@@ -70,7 +75,7 @@ Additional security improvements you can make to your project:
 
 ## Application
 
-Webiny is built to support different authentication mechanisms. Out of the box, it is configured to work with [AWS Cognito](https://aws.amazon.com/cognito/), an enterprise-grade, battle-tested identity provider. The framework, however, supports any identity provider, by means of plugins.
+Webiny is built to [support different authentication mechanisms](./sso-and-custom-authenticators). Out of the box, it is configured to work with [AWS Cognito](https://aws.amazon.com/cognito/), an enterprise-grade, battle-tested identity provider. The framework, however, supports any identity provider, by means of plugins.
 
 Webiny draws a very clear line between **authentication** and **authorization**. We rely on third-party IdPs for authentication and use a very flexible system of permissions for authorization.
 
