--- a/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
+++ b/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
@@ -10,6 +10,7 @@ import { Alert } from "@/components/Alert";
 <Alert type="success" title="What You’ll Learn">
 
 - Different authentication options
+- API Gateway Lambda authorizer
 
 </Alert>
 
@@ -25,6 +26,13 @@ In certain cases, an enterprise organization might already have an internal IdP 
 Customers using Webiny Enterprise edition can integrate those 3rd party IdPs with Webiny and use it to control, from a central place, which of their employees are allowed to access their Webiny instance. 
 
 Webiny provides integrations with the most popular IdPs such as [OKTA](/docs/{version}/enterprise/okta-integration) and [Auth0](/docs/{version}/enterprise/auth0-integration) out of the box. For other IdPs and SSO Webiny's core engineering team can work directly with the customer and make those integrations, as part of their Webiny Enterprise contract. 
+
+## API Gateway Lambda authorizers
+
+Certain organizations take every possible step to harden the security of applications and solutions deployed within their network. In certain cases, it might not be possible to use a specific solution if it doesn't meet those security requirements. One of those security policies is a requirement that API Gateways cannot have their Authorizers set to NONE. Instead, a Lambda authorizer function is required. A Lambda authorizer is an API Gateway feature that uses a Lambda function to control access to your API.
+
+As a Webiny Enterprise customer, you will get the required support and ready-made plugins and scripts to implement your API Gateway Lambda authorizer.
+
 
 ## FAQ
 
