feat: create 5.34.3 release notes

--- a/src/docs/shared/release-notes/5.34.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.3/changelog.mdx
@@ -35,3 +35,33 @@ This issue has now been addressed.
 #### Elements Can Now Be Moved Up and Down On The Canvas (Drag and Drop)
 
 In the page editor, reordering existing page elements via drag and drop method now works correctly.
+
+## Development
+
+### Ability To Define Multiple Production Environments Via `webiny.application.ts`  ([#3014](https://github.com/webiny/webiny-js/pull/3014))
+
+Upon running the [`webiny deploy`](/docs/{exact:5.34.x}/core-development-concepts/basics/project-deployment) command, when `prod` was passed as the environment name, a Webiny project would be deployed in the so-called [production deployment mode](https://www.webiny.com/docs/architecture/deployment-modes/production).
+
+But, if a user wanted to use the same mode for, say, "staging", that would not be easily possible.
+
+That's why we're introducing the `productionEnvironments` parameter for all applications, which can utilized in respective `webiny.application.ts` configuration files. For example:
+
+```ts apps/core/webiny.application.ts
+import { createCoreApp } from "@webiny/serverless-cms-aws";
+
+export default createCoreApp({
+    pulumiResourceNamePrefix: "wby-",
+
+    // Treats provided environments as production environments, which
+    // are deployed in production deployment mode.
+    productionEnvironments: ["prod", "staging"]
+});
+
+```
+
+Note that when specifying additional production environments, they should be specified across all project applications, meaning:
+
+1. `apps/core/webiny.application.ts`
+2. `apps/api/webiny.application.ts`
+3. `apps/admin/webiny.application.ts`
+4. `apps/website/webiny.application.ts`
