feat: create 5.34.3 release notes

--- a/src/docs/shared/release-notes/5.34.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.3/changelog.mdx
@@ -40,11 +40,11 @@ In the page editor, reordering existing page elements via drag and drop method n
 
 ### Ability To Define Multiple Production Environments Via `webiny.application.ts`  ([#3014](https://github.com/webiny/webiny-js/pull/3014))
 
-Upon running the [`webiny deploy`](/docs/{exact:5.34.x}/core-development-concepts/basics/project-deployment) command, when `prod` was passed as the environment name, a Webiny project would be deployed in the so-called [production deployment mode](https://www.webiny.com/docs/architecture/deployment-modes/production).
+Upon running the [`webiny deploy`](/docs/{exact:5.34.x}/core-development-concepts/basics/project-deployment) command, when `prod` is passed as the environment name, a Webiny project is deployed in the so-called [production deployment mode](https://www.webiny.com/docs/architecture/deployment-modes/production).
 
-But, if a user wanted to use the same mode for, say, "staging", that would not be easily possible.
+But, if a user wanted to use the same mode for, say, `staging`, that would not be easily possible.
 
-That's why we're introducing the `productionEnvironments` parameter for all applications, which can utilized in respective `webiny.application.ts` configuration files. For example:
+That's why we're introducing the `productionEnvironments` parameter for all project applications, which can be utilized in their respective `webiny.application.ts` configuration files. For example:
 
 ```ts apps/core/webiny.application.ts
 import { createCoreApp } from "@webiny/serverless-cms-aws";
