--- a/src/docs/5.28.x/overview/applications/headless-cms.mdx
+++ b/src/docs/5.28.x/overview/applications/headless-cms.mdx
@@ -53,7 +53,7 @@ Each attribute can be of a different type. The included types are:
 - **Object**
   - Nested object field
   - Inside this field you can place multiple other fields such as text, file and others
-  - You can next objects to as many depth levels as you need
+  - You can nest objects to as many depth levels as you need
 
 Besides the default built-in attributes, you can expand Webiny with custom plugins that introduce new fields.
 
