wip: create PB Elements migration doc

--- a/src/docs/shared/release-notes/5.34.0/page-builder-pe-rendering-engine-migration.mdx
+++ b/src/docs/shared/release-notes/5.34.0/page-builder-pe-rendering-engine-migration.mdx
@@ -103,7 +103,7 @@ By removing this flag, we're instructing the Page Builder app to stop relying on
 The next step is to run the following `webiny upgrade` command:
 
 ```bash
-yarn webiny upgrade 5.34.0/page-elements-migration
+yarn webiny upgrade --use-version 5.34.0/page-elements-migration
 ```
 
 Once run, the upgrade script performs the following changes:
