Fixed a few typos and updated theme.ts code block according to actual code

--- a/src/docs/shared/release-notes/5.34.0/page-builder-pe-rendering-engine-migration.mdx
+++ b/src/docs/shared/release-notes/5.34.0/page-builder-pe-rendering-engine-migration.mdx
@@ -19,7 +19,7 @@ how to upgrade, please check the [Upgrade From 5.33.5 to 5.34.0](/docs/release-n
 
 <Image src={pe} title={"Page Elements: A Brand New Page Rendering Engine"} shadow={false} />
 
-With the [5.34.0 release](/docs/release-notes/5.34.0/changelog), we've introduced a brand new page rendering engine called **Page Elements**. Essentially, for pages created with Webiny's [Page Builder app](https://www.webiny.com/docs/overview/applications/page-builder), the rendering engine provides faster page loads, better SEO score, better DX, and also the ability to render pages in external projects, like a standalone Next.js application.
+With the [5.34.0 release](/docs/release-notes/5.34.0/changelog), we've introduced a brand-new page rendering engine called **Page Elements**. Essentially, for pages created with Webiny's [Page Builder app](https://www.webiny.com/docs/overview/applications/page-builder), the rendering engine provides faster page loads, better SEO score, better DX, and also the ability to render pages in external projects, like a standalone Next.js application.
 
 For new Webiny projects, the new rendering engine is enabled by default. No extra steps needed.
 
@@ -62,7 +62,7 @@ In the following text, we show all the steps needed to perform the migration fro
 
 This means the project has two default pages: **Welcome to Webiny** (home page) and **Not Found**. In this guide, we'll use the former to demonstrate how the steps we're making are affecting the actual page.
 
-The project also doesn't have an customizations, like custom typography, colors, or custom page elements. Depending on the level of customizations present in your project, additional work might be needed. But still, the steps shown in the following section will give a clue on what needs to be done.
+The project also doesn't have any customizations, like custom typography, colors, or custom page elements. Depending on the level of customizations present in your project, additional work might be needed. But still, the steps shown in the following section will give a clue on what needs to be done.
 
 
 ### Enabling the New Page Rendering Engine
@@ -159,7 +159,7 @@ yarn webiny watch admin --env dev
 <Alert type={"success"}>
 
 From Webiny version 5.34.0, upon running various Webiny CLI commands, users no longer need to type the full path of
-the project application. That's why the above command passes `admin` as the application name, an not `apps/admin`.
+the project application. That's why the above command passes `admin` as the application name, and not `apps/admin`.
   
   For more information, check out the [changelog](/docs/release-notes/5.34.0/changelog#application-aliases-2895).
 
@@ -221,20 +221,24 @@ But, as mentioned, since the old theme object is no longer being used, the value
 ```diff-ts apps/theme/theme.ts
 // Some of the code removed for brevity.
 
+// Colors.
+export const colors = {
+    color1: "#fa5723", // Primary.
+    color2: "#00ccb0", // Secondary.
+    color3: "#0a0a0a", // Text primary.
+    color4: "#616161", // Text secondary.
+    color5: "#eaecec", // Background.
+    color6: "#ffffff" // White background.
+};
+
+// ...
+
 // Theme object.
 const theme = createTheme({
     breakpoints: { ... },
     styles: {
-        colors: {
-          // Colors defined as HEX color codes.
-          color1: "#fa5723", // Primary.
-          color2: "#00ccb0", // Secondary.
-          color3: "#0a0a0a", // Text primary.
-          color4: "#616161", // Text secondary.
-          color5: "#eaecec", // Background.
-          color6: "#ffffff", // White background.
-        },
-        typography: { ... },
+        colors,
+        typography,
         elements: { ... }
     }
 });
