wip: create release docs

--- a/src/docs/shared/release-notes/5.34.4/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.4/changelog.mdx
@@ -6,8 +6,16 @@ description: See what's new in Webiny version 5.34.4.
 
 ## Page Builder
 
-### Addressed Several Page Builder-related Issues ([#3007](https://github.com/webiny/webiny-js/pull/3007))
+### Image Page Element - Further Optimize`srcset` Attribute ([#3026](https://github.com/webiny/webiny-js/pull/3026))
+
+xyz
+
+### Fixed Data Fetching For Pages List and Form Elements ([#3027](https://github.com/webiny/webiny-js/pull/3027))
+
+xyz
 
 ## Development
 
-### Addressed Several Page Builder-related Issues ([#3007](https://github.com/webiny/webiny-js/pull/3007))
+### Use `arm64` Arch Pulumi CLI When Possible ([#3028](https://github.com/webiny/webiny-js/pull/3028))
+
+xyz
